NSCI0010/html/reports/Hurricance.log
Traceback (most recent call last):
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "c:\users\natsciteaching\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import csv

x = []
y = []

# Open the data file
with open("irma.csv") as f:
    reader = csv.reader(f)
    next(reader)
    for row in reader:
        latitude = float(row[2])
        longitude = float(row[3])
        
        x.append((longitude + 90)*964/(right-left))
        y.append((height*(1 - (latitude - bottom)/(top-bottom)))
        
print("x-coords:", x)
print("y-coords:", y)
------------------

[1;36m  File [1;32m"C:\Users\NatSciTeaching\AppData\Local\Temp\ipykernel_6620\2262081961.py"[1;36m, line [1;32m17[0m
[1;33m    print("x-coords:", x)[0m
[1;37m        ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (2262081961.py, line 17)

